Esimerkkiulostuloa ei versionhallintaan

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ package.json
 koodiesimerkit/ipython/VENV/*
 koodiesimerkit/explore/VENV/*
 koodiesimerkit/explore/data/*
+koodiesimerkit/output1.html
