Hakemisto raapija-demokoodille

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ koodiesimerkit/ipython/VENV/*
 koodiesimerkit/explore/VENV/*
 koodiesimerkit/explore/data/*
 koodiesimerkit/output1.html
+koodiesimerkit/output1.html
