--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ koodiesimerkit/explore/VENV/*
 koodiesimerkit/explore/data/*
 koodiesimerkit/output1.html
 koodiesimerkit/output1.html
+koodiesimerkit/linear-regression/demo.ipynb
