Ignoring checkpoint file
This rule will probably be generalized in the future

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ koodiesimerkit/explore/data/*
 koodiesimerkit/output1.html
 koodiesimerkit/output1.html
 koodiesimerkit/linear-regression/demo.ipynb
+koodiesimerkit/airbnb/.ipynb_checkpoints/python_scikit_airbnb (2)-checkpoint.ipynb
